Update neeto-icons styles to fix visibility issues in NeetoUI dark mode (#2718)
* Update neeto-icons styles to fix visibility issues in NeetoUI dark mode

* Bugwatch suggestion

--- a/src/styles/layout/_common.scss
+++ b/src/styles/layout/_common.scss
@@ -8,30 +8,10 @@
   }
 }
 
-.neeto-ui-theme--dark{
-  [data-dark-fill="white"] {
-    fill: white;
-  }
+.neeto-ui-theme--dark [data-dark-mode-color="true"][fill]:not([fill="none"]) {
+  fill: currentColor;
+}
 
-  [data-dark-stroke="white"] {
-    stroke: white;
-  }
-
-  [data-dark-fill-stroke="white"] {
-    fill: white;
-    stroke: white;
-  }
-
-  [data-dark-fill="current"] {
-    fill: currentColor;
-  }
-
-  [data-dark-stroke="current"] {
-    stroke: currentColor;
-  }
-
-  [data-dark-fill-stroke="current"] {
-    fill: currentColor;
-    stroke: currentColor;
-  }
+.neeto-ui-theme--dark [data-dark-mode-color="true"][stroke]:not([stroke="none"]) {
+  stroke: currentColor;
 }
